fixed overflow on stylesheet, added actual content to pages (except the projects list haha)

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,9 +9,13 @@
 }
 
 p {
-  margin-inline: 12em;
   font-family: Consolas;
   font-size: medium;
+}
+
+h1 {
+  font-family: Consolas;
+  margin-top: 2em;
 }
 
 .HeaderItem {
@@ -50,6 +54,12 @@ p {
 
 .siteBody {
   display: block;
-  overflow: auto;
+  overflow: hidden;
   height: auto;
+  margin-inline: 20%;
+}
+
+.link {
+  font-family: Consolas;
+  display: block;
 }
